RDCC-4989 updated integration test cases